# txeventq-ai-samples

./: README.md
health-care-diagnosis-sample/: README.md  pyproject.toml  requirements.txt
health-care-diagnosis-sample/data/metadata/: brain_centroid.npy  chest_centroid.npy
health-care-diagnosis-sample/src/health_care/client/: __init__.py  receive_response.py  send_request.py
health-care-diagnosis-sample/src/health_care/pre_processing/: calculate_centroid_threshold.sql  create_txeventq_user.sql  data_table_creation.sql  oml_model_creation.sql  patient_table.sql  test_table_creation.sql  testing.py  testing_data.sql  training.py  vect_table.sql
health-care-diagnosis-sample/src/health_care/pre_processing/queue_setup_script/: brain_queue_setup.sql  chest_queue_setup.sql  diagnosis_queue_setup.sql  reponse_queue_setup.sql  request_queue_setup.sql
health-care-diagnosis-sample/src/health_care/util/: config.py  embed.py  txeventq_helper.py
health-care-diagnosis-sample/src/health_care/worker/agent/: diagnosis_agent.py  llm_processing.py
health-care-diagnosis-sample/src/health_care/worker/txeventq_subs/: brain_notumor_sub.py  brain_tumor_sub.py  chest_normal_sub.py  chest_pneumonia_sub.py  request_brain_sub.py  request_chest_sub.py  txeventq_worker.py
real-time-fraud-detection-sample/: README.md  requirements.txt
real-time-fraud-detection-sample/code/: 01_create_txeventq_user.sql  02_txeventq_setup.sql  03_fixed_rule_subscriber.sql  04_train_data_setup.sql  05_insert_training_data.py  06_svm_unsupervised.sql  07_isolation_forest.py  08_1_import_onnx_model.py  (+11 more)
(+5 files in other folders)
